syntax = "proto3";

import "common.proto";


service ModelProfile {
    rpc profile_model(ProfileRequest) returns (ProfileResponse);
}

message ProfileRequest {
    common.ModelId model_id = 1;
    optional bool profile_regression = 2;
}

message ProfileResponse {
    string model_profile = 1 ;
}